# AI-Data-Engineering

./: .gitattributes  .gitignore  Create_Embeddings_GPT_Model.embd  DataModel_Design_Using_RAG.rag  DataModel_Semantic_Search.semanic  DataModel_Vector_Databse.Vector  RAG_Multi_Agentic_Data_Analysis.ipynb  RAG_NN_ADM_Data_Modeling_GPT.ipynb  RAG_NN_ADM_Gen_Queries_GPT.ipynb  README.md  main.py  pyproject.toml  requirements.txt
Output/: DataModel_NN_ADM.html  solution_brd_adm_customers.py
