[project]
name = "ai-data-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "openai-agents>=0.17.7",
    "oracledb>=4.0.1",
    "pypdf>=6.14.2",
]
